Collection API Улучшения[#242446]